# ChangeLog for net-www/opera
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/opera/Attic/ChangeLog,v 1.73 2004/07/08 21:05:51 eradicator Exp $

  08 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> opera-7.52.ebuild:
  amd64 static only

  08 Jul 2004; Heinrich Wendel <lanius@gentoo.org> opera-7.51-r1.ebuild,
  opera-7.51.ebuild:
  remove vulnerable versions

  07 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> opera-7.52.ebuild:
  Stable sparc, amd64.  sparc only uses the static version.

*opera-7.52 (07 Jul 2004)

  07 Jul 2004; Heinrich Wendel <lanius@gentoo.org> opera-7.52.ebuild:
  version bump, security update: bug #56311

*opera-7.51-r1 (03 Jul 2004)

  03 Jul 2004; Heinrich Wendel <lanius@gentoo.org> opera-7.50-r1.ebuild,
  opera-7.51-r1.ebuild:
  fix sandbox violation, bug #55130
  fix artsd support with java, bug #54813

  25 Jun 2004; Aron Griffis <agriffis@gentoo.org> opera-6.12.ebuild,
  opera-7.11-r2.ebuild, opera-7.23-r1.ebuild, opera-7.50-r1.ebuild,
  opera-7.51.ebuild:
  QA - fix use invocation

  04 Jun 2004; Jason Wever <weeve@gentoo.org> opera-7.51.ebuild:
  Marked stable on sparc wrt bug #52867.

*opera-7.51 (03 Jun 2004)

  03 Jun 2004; Heinrich Wendel <lanius@gentoo.org> opera-7.51.ebuild:
  version bump, add spell use flag, mark stable because of security issues, bug
  #52867

  28 May 2004; Danny van Dyk <kugelfang@gentoo.org> opera-7.50-r1.ebuild:
  Refixed dependency problem on amd64 (BUG #51281).

  24 May 2004; Jason Wever <weeve@gentoo.org> opera-7.50-r1.ebuild:
  Stable on sparc wrt bug #50857.

  23 May 2004; Danny van Dyk <kugelfang@gentoo.org> opera-7.50.ebuild:
  Fixed BUG #51281: Missing dependency for static version on amd64.

  24 May 2004; Heinrich Wendel <lanius@gentoo.org> opera-7.50-r1.ebuild:
  fix plugin search path, bug #51070 and spellcheck search path, bug #51183
