@@ -1,11 +1,11 @@
-MD5 72e148f116d0a602c3a804dfb133e924 ChangeLog 12076
-MD5 503ccb1138f9c49f0855884d830988a6 metadata.xml 253
 MD5 6bc54e68ebc4efff54d13094f092b6d5 opera-6.12.ebuild 3304
-MD5 e98a0549d46aadd78a43ba042539b497 opera-7.11-r2.ebuild 3670
+MD5 1873565d0d0b13c14a02efc780170772 opera-7.53.ebuild 4876
 MD5 85383966c3542de9c8fb14f62be9b1b1 opera-7.23-r1.ebuild 3842
-MD5 92430dea580a65ba41ca7c50c736884d opera-7.52.ebuild 4880
+MD5 e98a0549d46aadd78a43ba042539b497 opera-7.11-r2.ebuild 3670
+MD5 8278f3a13495cab20da23210477aafbc ChangeLog 12240
+MD5 503ccb1138f9c49f0855884d830988a6 metadata.xml 253
 MD5 cbaaedfc5f57eea800b4a64928d77683 files/digest-opera-6.12 89
+MD5 ac35f62884ba3c6c86dff173a88daf14 files/digest-opera-7.53 464
 MD5 fd6b6eba741abd18ba590e9a5c0f225f files/digest-opera-7.11-r2 177
 MD5 9a8a982857424445242430340a70783c files/digest-opera-7.23-r1 558
 MD5 8336a92d029cd448620bf4bbd4c55715 files/opera.desktop 135
-MD5 138740c5a86406ca1ddce49765b4132a files/digest-opera-7.52 464
