@@ -1,5 +1,0 @@
-MD5 32de80e01fdb37a3ee02d445ea656cb2 opera-7.52-20040706.1-static-qt.i386-en.tar.bz2 4871141
-MD5 4c0c89c611d36114d609f5f4ff8d4c00 opera-7.52-20040706.5-shared-qt.i386-en.tar.bz2 3672291
-MD5 eddc2c73513044d6912f9a1751ca677c opera-7.52-20040706.1-static-qt.ppc-en.tar.bz2 4918543
-MD5 716c6c6aaa9259c4e7226c99f8f68f19 opera-7.52-20040706.2-shared-qt.ppc-en.tar.bz2 3654199
-MD5 f68c3a6d5f27e11feb11be39b5f1da67 opera-7.52-20040706.1-static-qt.sparc-en.tar.bz2 4862053
