@@ -1,0 +1,5 @@
+MD5 293ae0b0fb87a5b5fac7ef5572795dc8 opera-7.53-20040716.1-static-qt.i386-en.tar.bz2 4870722
+MD5 2b6426974ecefe2ef90c10612cdb07e8 opera-7.53-20040716.5-shared-qt.i386-en.tar.bz2 3673501
+MD5 2e1ecb1503ed5454bfa7bf5fc9cfa5e6 opera-7.53-20040716.1-static-qt.ppc-en.tar.bz2 4919000
+MD5 1368cb42f5fe7ccb747f6e763a750068 opera-7.53-20040716.2-shared-qt.ppc-en.tar.bz2 3655104
+MD5 1824176a32518b61cad8dae5e183c27b opera-7.53-20040716.1-static-qt.sparc-en.tar.bz2 4862558
